[tool.poetry]
name = "dccmd"
version = "0.5.0"
description = "DRACOON Commander - CLI client for DRACOON Cloud (dracoon.com)"
authors = ["Octavio Simone <70800577+unbekanntes-pferd@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
dracoon = "^1.12.2"
keyring = "^23.6.0"
SecretStorage = "^3.3.1"
tqdm = "^4.65.0"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dccmd = "dccmd:app"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"